@@ -6,4 +6,6 @@ noinst_LIBRARIES = libeutil.a
 libeutil_a_SOURCES = \
 	e-cursors.c	\
 	e-cursors.h	\
+	e-gui-utils.c	\
+	e-gui-utils.h	\
 	e-util.h
