@@ -1,0 +1,8 @@
+#ifndef E_INIT_H
+#define E_INIT_H
+
+extern char *evolution_base_dir;
+
+void e_init (void);
+
+#endif /* E_INIT_H */
