@@ -1,3 +1,8 @@
+2000-01-06  Miguel de Icaza  <miguel@gnu.org>
+
+	* configure.in: Add Bonobo detection, Bonobo flags for compilation
+	for the components and the shell.
+
 2000-01-06 Elliot Lee <sopwith@redhat.com>
 	* composer/Makefile.am, widgets/e-table/Makefile.am: Work with
 	builddir != srcdir
